# engine_playground

./: .gitignore  Broadphase.cpp  Broadphase.h  CMakeLists.txt  HitInfo.cpp  HitInfo.h  Integrator.cpp  Integrator.h  PhysicsWorldVariable.h  README.md  World.cpp  World.h  bench.cpp  bench.h  bench_main.cpp  body.h  boid.h  boid_flock.cpp  boid_flock.h  contact.h  contact_manifold.h  debug_draw.cpp  debug_draw.h  engine_time.h  main.cpp  physics_state.h  physics_world.cpp  physics_world.h  physics_world_variable.cpp  physics_world_variable.h  render_2d.cpp  render_2d.h  render_console.cpp  render_console.h  rvo_solver.cpp  rvo_solver.h  shape.h  vec2.h
docs/: Collision&Tunneling.md  EngineCore.md  fixed_timestep_ccd_overshoot_and_split_impulse_notes.md  overshoot2stable_contact_guide.md  perf_analysis.md
tests/: test_accumulator.cpp  test_body.cpp  test_ccd.cpp  test_contact_solver.cpp  test_helpers.h  test_integrator.cpp  test_physics_world.cpp  test_rvo.cpp
